--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "ember-qunit": "0.1.8",
     "ember-qunit-notifications": "0.0.5",
     "qunit": "~1.17.1",
-    "picnic": "https://github.com/picnicss/picnic.git"
+    "picnic": "https://github.com/picnicss/picnic.git",
+    "moment": "~2.9.0"
   }
 }
