--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "ember-export-application-global": "^1.0.0",
     "express": "^4.8.5",
     "glob": "^4.0.5"
+  },
+  "dependencies": {
+    "ember-cli-fill-murray-theharq": "^0.1.0"
   }
 }
